Fix issue on mobile that scrolled past intro

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ article {
     scroll-snap-stop: always;
 }
 
+#where,
 #where article,
 article#intro {
     scroll-snap-align: none;
